--- a/components/ChatComponents/CreateChannel/UserList.css
+++ b/components/ChatComponents/CreateChannel/UserList.css
@@ -6,7 +6,7 @@
     border: 1px solid #f2f2f2;
     position: relative;
     max-height: 500px;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .selected-user-list__container {
